[package]
name = "ethers-gcp-kms-signer"
version = "0.1.2"
edition = "2021"
description = " ethers-rs signer using GCP KMS"
repository = "https://github.com/georgewhewell/ethers-gcp-kms-signer"
license = "MIT OR Apache-2.0"
include = ["**/*.rs"]

[dependencies]
async-trait = "0.1.68"
ethers = "2.0.4"
gcloud-sdk = { version = "0.20.1", features = ["google-cloud-kms-v1"] }
thiserror = "1.0.40"
tonic = "0.9"
tracing = "0.1.37"

[dependencies.spki]
version = "0.7.2"
features = ["pem"]

[dev-dependencies]
test-log = { version = "0.2.11", default-features = false }
tokio = { version = "1.28.0", features = ["macros"] }
